--- a/WordPress_Single_InstanceOwn.yaml
+++ b/WordPress_Single_InstanceOwn.yaml
@@ -5,6 +5,7 @@ Description: 'AWS CloudFormation Sample Template WordPress_Single_Instance: Word
   the AWS CloudFormation bootstrap scripts to deploy WordPress. **WARNING** This template
   creates an Amazon EC2 instance. You will be billed for the AWS resources used if
   you create a stack from this template.'
+# takes something like one minute
 Parameters:
   DBName:
     AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
@@ -47,10 +48,6 @@ Parameters:
     Default: t2.nano
     Description: WebServer EC2 instance type
     Type: String
-  KeyName:
-    ConstraintDescription: must be the name of an existing EC2 KeyPair.
-    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
-    Type: AWS::EC2::KeyPair::KeyName
   SSHLocation:
     AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
@@ -61,15 +58,9 @@ Parameters:
     Type: String
 Mappings:
   AWSInstanceType2Arch:
-    t2.large:
-      Arch: HVM64
-    t2.medium:
-      Arch: HVM64
     t2.micro:
       Arch: HVM64
     t2.nano:
-      Arch: HVM64
-    t2.small:
       Arch: HVM64
   AWSRegionArch2AMI:
     eu-central-1:
@@ -187,8 +178,8 @@ Resources:
       ImageId: !FindInMap [AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [AWSInstanceType2Arch, !Ref InstanceType, Arch]]
       InstanceType:
         Ref: InstanceType
-      KeyName:
-        Ref: KeyName
+      #KeyName:
+      #  Ref: KeyName TODO remember select image where is some other way to connect
       SecurityGroups:
       - Ref: WebServerSecurityGroup
       UserData:
