--- a/S3_Website_Bucket_With_Retain_On_Delete.yaml
+++ b/S3_Website_Bucket_With_Retain_On_Delete.yaml
@@ -9,7 +9,7 @@ Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      AccessControl: PublicRead
+      AccessControl: Private
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: error.html
