--- a/S3_Website_Bucket_With_Retain_On_Delete.yaml
+++ b/S3_Website_Bucket_With_Retain_On_Delete.yaml
@@ -13,6 +13,11 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: error.html
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
     DeletionPolicy: Retain
 Outputs:
   WebsiteURL:
